credits system included

--- a/api-key-new/.env
+++ b/api-key-new/.env
@@ -9,14 +9,15 @@ DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/api_key_mana
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=Google Client id
 GOOGLE_CLIENT_SECRET=Google client secret
+
 # Stripe Configuration
-STRIPE_SECRET_KEY=sk key
-STRIPE_PUBLIC_KEY=pk key
+STRIPE_SECRET_KEY=sk_key
+STRIPE_PUBLIC_KEY=pk_key
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
 
 # API Key Price Configuration
 STRIPE_API_KEY_PRICE_ID=price_1RWftS4DYMarAiZdsoMJfgO0  # Replace with your actual price ID
-STRIPE_API_KEY_PRICE_AMOUNT=3000  # $30 in cents
+STRIPE_API_KEY_PRICE_AMOUNT=3000  # $9.99 in cents
 STRIPE_API_KEY_PRICE_CURRENCY=usd
 STRIPE_API_KEY_PRODUCT_NAME="API Key"
 STRIPE_API_KEY_PRODUCT_DESCRIPTION="30-day API key access"
@@ -31,6 +32,7 @@ MAIL_PASSWORD=your-app-specific-password
 # Application Settings
 API_KEY_EXPIRY_DAYS=30
 MAX_API_KEYS_PER_USER=10
+API_KEY_CREDITS=5000
 
 # Security Settings
 SESSION_COOKIE_SECURE=True
